<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xxapp.Activites.LoginActivity"
    android:orientation="vertical">
<com.xxapp.Views.TitleView
    android:id="@+id/register_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:tv_title="@string/register_title"
    app:tv_right="@string/register_title_right"
    app:tv_tv_right_visibility="visibility"/>

<com.xxapp.Views.MEditText
    android:id="@+id/register_phone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_10"
    android:layout_marginRight="@dimen/margin_10"
    app:me_del_enable="true"
    app:me_eye_enable="false"
    app:me_hint="@string/login_input_user"
    app:me_inputType="normal"
    app:me_lable_src="@mipmap/ic_launcher"/>

<com.xxapp.Views.MEditText
    android:id="@+id/register_pwd"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_10"
    android:layout_marginRight="@dimen/margin_10"
    app:me_del_enable="true"
    app:me_eye_enable="true"
    app:me_hint="@string/login_input_pwd"
    app:me_inputType="password"
    app:me_lable_src="@mipmap/ic_launcher"/>
    <com.xxapp.Views.MEditText
        android:id="@+id/register_pwd_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        app:me_del_enable="true"
        app:me_eye_enable="true"
        app:me_hint="@string/login_input_pwd_again"
        app:me_inputType="password"
        app:me_lable_src="@mipmap/ic_launcher"/>
</LinearLayout>
