<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xxapp.Activites.LoginActivity"
    android:orientation="vertical">
    <com.xxapp.Views.TitleView
        android:id="@+id/register_validate_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tv_title="@string/app_name"
        app:tv_right="@string/register_title_right"
        app:tv_tv_right_visibility="invisibility"/>

    <com.xxapp.Views.MEditText
        android:id="@+id/validatePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        app:me_del_enable="true"
        app:me_eye_enable="false"
        app:me_hint="@string/register_phone"
        app:me_inputType="number"
        app:me_lable_src="@mipmap/ic_launcher"
        app:me_maxLength="11"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/validate_getCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fontSizeSp_15"
            android:text="@string/register_get_code"
            android:textColor="@color/selector_button_bg"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/validateCode"
            android:layout_alignBottom="@+id/validateCode"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:paddingLeft="@dimen/paddingTop_10"
            android:paddingRight="@dimen/paddingTop_10"
            android:enabled="false"
            android:background="@drawable/selector_button_bg_red"/>

        <com.xxapp.Views.MEditText
            android:id="@+id/validateCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/validate_getCode"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            app:me_del_enable="true"
            app:me_eye_enable="false"
            app:me_hint="@string/register_validate_code"
            app:me_maxLength="4"
            app:me_inputType="number"
            app:me_lable_src="@mipmap/ic_launcher"/>
    </RelativeLayout>
</LinearLayout>
